[build-system]
requires = [ "whey",]
build-backend = "whey"

[project]
name = "tox-raspi-ci"
version = "0.0.0"
description = "tox integration for raspi-ci."
readme = "README.rst"
keywords = [ "tox", "tox-plugin",]
dynamic = [ "requires-python", "classifiers", "dependencies",]

[project.license]
file = "LICENSE"

[[project.authors]]
name = "Dominic Davis-Foster"
email = "dominic@davis-foster.co.uk"

[project.urls]
Homepage = "https://github.com/domdfcoding/tox-raspi-ci"
"Issue Tracker" = "https://github.com/domdfcoding/tox-raspi-ci/issues"
"Source Code" = "https://github.com/domdfcoding/tox-raspi-ci"

[project.entry-points.tox]
raspi-ci = "tox_raspi_ci"

[tool.importcheck]
always = [ "tox_envlist",]

[tool.whey]
base-classifiers = [
    "Development Status :: 3 - Alpha",
    "Framework :: tox",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Quality Assurance",
    "Topic :: Software Development :: Testing",
    "Topic :: Software Development :: Testing :: Unit",
    "Typing :: Typed",
]
python-versions = [ "3.7", "3.8", "3.9", "3.10",]
python-implementations = [ "CPython",]
platforms = [ "Linux",]
license-key = "MIT"
package = "tox_raspi_ci"

[tool.mypy]
python_version = "3.8"
namespace_packages = true
check_untyped_defs = true
warn_unused_ignores = true
no_implicit_optional = true
show_error_codes = true

[tool.snippet-fmt]
directives = [ "code-block",]

[tool.snippet-fmt.languages.python]
reformat = true

[tool.snippet-fmt.languages.TOML]
reformat = true

[tool.snippet-fmt.languages.ini]

[tool.snippet-fmt.languages.json]

[tool.dependency-dash."requirements.txt"]
order = 10

[tool.dependency-dash."tests/requirements.txt"]
order = 20
include = false
